<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CabrioletActivity"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/black"
        android:backgroundTint="#3DB7D8"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <androidx.appcompat.widget.SearchView
                android:id="@+id/search_box"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:hint="@string/rechercher_un_produit"
                android:inputType="text" />

            <ImageView
                android:layout_width="75dp"
                android:layout_height="49dp"
                android:layout_marginHorizontal="0dp"
                android:src="@drawable/logo3"
                tools:ignore="ImageContrastCheck"
                android:contentDescription="@string/logo" />

            <Button
                android:id="@+id/account_button"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:backgroundTint="#0CA4D3"
                android:text="@string/compte"

                android:textColor="#263238" />

        </LinearLayout>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true" >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                tools:ignore="VisualLintBounds">


                <Button
                    android:id="@+id/buttonNouveaute"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:backgroundTint="#0CA4D3"
                    android:text="@string/nouveaute"
                    android:textColor="#263238"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/buttonSuv"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:backgroundTint="#0CA4D3"
                    android:text="@string/suv"
                    android:textColor="#1A237E" />

                <Button
                    android:id="@+id/buttonPickUp"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:backgroundTint="#0CA4D3"
                    android:text="@string/pickup"
                    android:textColor="#1A237E" />

                <Button
                    android:id="@+id/buttonAll"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:backgroundTint="#0CA4D3"
                    android:text="@string/all"
                    android:textColor="#1A237E" />


            </LinearLayout>
        </HorizontalScrollView>
    </LinearLayout>

    <ListView
        android:id="@+id/carCabriolet_listview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:divider="@android:color/transparent"
        android:dividerHeight="10dp"
        />


</LinearLayout>